melhorei a documentação do redme e comecamos a mexer no arquivo do javascript

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <input id="inputState" class="form-control">
         </div>
         <div class="col-12">
-          <button type="submit" class="btn btn-primary">Cadastrar:</button>
+          <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
+      <script  type="text/javascript" scr="./controller.js"></script>
 </body>
 </html>
