--- a/index.html
+++ b/index.html
@@ -10,38 +10,83 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body>
-  <h1>cadastro de endereço</h1>
+<body> 
+  <br>
+  <div class="container">
   <form class="row g-3">
+    <h1>cadastro</h1>
+    <div class="col-4">
+      <label for="inputZip" class="form-label">e-mail</label>
+      <input type="text" class="form-control border border-info" id="e-mail">
+    </div><br>
+    <form class="row g-3">
+      <div class="col-4">
+        <label for="inputZip" class="form-label">nome</label>
+        <input type="text" class="form-control border border-info" id="nome">
+      </div><br>
+      <form class="row g-3">
+        <div class="col-4">
+          <label for="inputZip" class="form-label">data de nascimento</label>
+        <input type="date" class="form-control border border-info" id="dataNascimento">
+        </div><br>
+          <form class="row g-3">
+            <div class="col-4">
+              <label for="inputZip" class="form-label">telefone</label>
+              <input type="text" class="form-control border border-info" id="telefone">
+            </div><br>
+            <span class=" form-control border border-info">
+              <label for="">Sexo</label>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label" for="flexRadioDefault1">Masculino</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label" for="flexRadioDefault2">Feminino</label>
+              </div>
+            </span>
+            <div class="col-6">
+              <label for="senha" class="form-label">Senha</label><br>
+              <input type="password" class="form-control border border-info rounded-1" id="senha"><br>
+            </div>
+            <div class="col-6">
+              <label for="confirmSenha" class="form-label">Confirme a Senha</label><br>
+              <input type="password" class="form-control border border-info rounded-1" id="confirmSenha"><br>
+            </div>
+          
+          <br>
+  <form class="row g-3">
+    <h1>cadastro de endereço</h1>
     <div class="col-4">
       <label for="inputZip" class="form-label">CEP</label>
-      <input type="text" class="form-control" id="cep">
+      <input type="text" class="form-control border border-info" id="cep">
     </div><br>
     <div class="col-9">
       <label for="inputAddress" class="form-label">Endereço:</label>
-      <input type="text" class="form-control" id="rua" placeholder="rua dos bobos">
+      <input type="text" class="form-control border border-info" id="rua" placeholder="rua dos bobos">
     </div>
     <div class="col-3">
       <label for="inputAddress" class="form-label">Numero:</label>
-      <input type="text" class="form-control" id="numero">
+      <input type="text" class="form-control border border-info" id="numero">
     </div>
     <div class="col-12">
       <label for="inputAddress2" class="form-label">Bairro:</label>
-      <input type="text" class="form-control" id="bairro" placeholder="Apartment, studio, or floor">
+      <input type="text" class="form-control border border-info" id="bairro" placeholder="Apartment, studio, or floor">
     </div>
     <div class="col-md-6">
       <label for="inputCity" class="form-label">Cidade:</label>
-      <input type="text" class="form-control" id="cidade">
+      <input type="text" class="form-control border border-info" id="cidade">
     </div>
     <div class="col-md-4">
       <label for="inputState" class="form-label">Estado:</label>
-      <input id="estado" class="form-control">
+      <input id="estado" class="form-control border border-info">
+    <div class="col-12"> <br>
     </div>
-    <div class="col-12">
       <button type="submit" class="btn btn-primary">Cadastrar</button>
     </div>
   </form>
   <script type="text/javascript" src="./controller.js"></script>
+
 </body>
 
 </html>
